<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sem7_Activity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="234dp"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:text="@string/enter_0_for_fail"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingSem7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/headingSem7"
        android:layout_width="289dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:text="@string/sem_7"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorLink="#F4EFEF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sem7_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/_18_71"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingSem7"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/sem7_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/_18_72"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem7_1"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/sem7_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/_18_73"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem7_2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/sem7_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/_18_74"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem7_3"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/sem7_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/_18_75"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem7_4"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/sem7_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/_18_l76"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem7_5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/calc_sem7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:backgroundTint="#DC143C"
        android:text="@string/calculate"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem7_7"
        app:layout_constraintVertical_bias="0.16000003" />

    <Button
        android:id="@+id/reset_sem7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#DC143C"
        android:text="@string/reset"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/calc_sem7"
        app:layout_constraintTop_toBottomOf="@+id/sem7_7"
        app:layout_constraintVertical_bias="0.16000003" />

    <EditText
        android:id="@+id/sem7_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/_18_l77"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem7_6"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
