<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sem4_activity">

    <TextView
        android:id="@+id/headingSem4"
        android:layout_width="289dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:text="@string/sem_4"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorLink="#F4EFEF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sem4_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/_18_41"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingSem4"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/sem4_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/_18_42"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem4_1"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/sem4_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/_18_43"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem4_2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/sem4_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/_18_44"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem4_3"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/sem4_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/_18_45"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem4_4"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/sem4_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/_18_46"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem4_5"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/sem4_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="@string/_18_l48"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem4_7"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/calc_sem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:backgroundTint="#DC143C"
        android:text="@string/calculate"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem4_8"
        app:layout_constraintVertical_bias="0.415" />

    <Button
        android:id="@+id/reset_sem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:backgroundTint="#DC143C"
        android:text="@string/reset"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/calc_sem4"
        app:layout_constraintTop_toBottomOf="@+id/sem4_8"
        app:layout_constraintVertical_bias="0.413" />

    <EditText
        android:id="@+id/sem4_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/_18_l47"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sem4_6"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
